# SRB-CBF-NMPC

./: .gitignore  CMakeLists.txt  README.md  TEST.txt  obs_cost.txt  print_file.out  replanning.txt  restore.sh  run.sh  unitreebash  whatsgoingon.txt
Old_MPC_Scripts/: MPC_dist.cpp  MPC_dist.hpp
Sim_Outputs/: HLPath.txt  HLVelocity.txt
cleanup/: runMPC.sh  stream  stream.c  test  test.c  test.cpp
driver_scripts/: qp_only_exp.cpp
include/: DataLog.hpp  Filters.h  LocoWrapper.hpp  LowLevelCtrl.hpp  MPC_dist.hpp  MotionPlanner.hpp  PathPlanner.hpp  dec_vars_constr_cost.h  fast_MPC.hpp  pack_nlp_data.h  shared_structs copy.hpp  shared_structs.hpp  to_cmpr.hpp
lcm_obs/: obs.lcm
lcm_obs/obs_ros/: obs.hpp
matlab_dbg/: COM_DES.txt  COM_dist.txt  COM_loco.txt  MPC_dist.txt  MPC_loco.txt  make_sense_of_qref.m  mpc_1hor.m  plot_mpc_dbg.asv  plot_mpc_dbg.m  plot_ref_traj.asv  plot_ref_traj.m  ref_taj_LOCO.txt  ref_taj_MPC.txt  vel_traj_MPC.txt
matlab_scripts/: MPC.txt  PlotHLReference.m  mpc_1hor.m
params/: LL_w_CLF.txt  MPC_0.2_NoUpdateEachItter.txt  MPC_0.2_decent.txt  MPC_2.0_decent_1.6Max  MPC_params.txt  MPC_params_new.txt  MPC_params_slowStep.txt  Walking_params.txt
src/: A1_Exp.cpp  A1_Exp_w_HL.cpp  A1_Sim.cpp  A1_Sim_4_agents.cpp  A1_Sim_Series.cpp  ContactEst.cpp  DataLog.cpp  LocoWrapper.cpp  LowLevelCtrl.cpp  MPC_dist copy.cpp  MPC_dist.cpp  MotionPlanner.cpp  Parameters.cpp  PathPlanner.cpp  RobotModel.cpp  VirtualConstraints.cpp  fast_MPC.cpp  to_compare_tmp.cpp  trot_ctrl.cpp
src/Old_Codes/: A1_FastMPC.cpp  Timing_test.cpp  direct_delayTest.cpp  inplace.cpp  multi_pc_comp.cpp  multi_pc_delay.cpp  multi_pc_pose.cpp  multi_pc_robot.cpp  pose_direct.cpp  pose_w_estim.cpp  quatTest.cpp  test.cpp  testnewframework.cpp  trot_KinFilt.cpp  wirelesstest.cpp
unitree_legged_sdk/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
unitree_legged_sdk/examples/: example_position.cpp  lcm_server_low.cpp  multi_pc_udp_recv.cpp  multi_pc_udp_send.cpp  testudpsend.cpp
unitree_legged_sdk/include/unitree_legged_sdk/: remote.h  unitree_joystick.h
